# asm-predictive-maintenance

./: .gitignore  Dockerfile  README.md  alembic.ini  client_example.py  glue_schema.json  pyproject.toml
alembic/: env.py
alembic/versions/: 3952f744f16c_initial_migration.py
config/: GantryMappting.json  IOConfig.json  analysis_config.yaml  machine_graph.yaml  process_logic.yaml  process_logic_backup.yaml  viz_resources.yaml
config/log_patterns/: prod_patterns.yaml  test_patterns.yaml
data/: .~lock.log_signature_audit_v1.xlsx#  .~lock.log_signature_audit_v2.xlsx#  log_signature_audit.csv  log_signature_audit.xlsx  log_signature_audit_v1.csv  log_signature_audit_v1.xlsx  log_signature_audit_v2.xlsx  machine_logs.txt  machine_state.json  process_baseline.json  process_metrics.csv  relevant_logs  relevant_logs_anonymized
data/baselines/: process_baseline_init.json
docs/: action_items  design_document_v1.md  design_document_v2.md  design_document_v3.md
docs/state_diagrams/: buffer_standard.mmd  dispenser.mmd  inspection.mmd  shuttle.mmd
scripts/: insert_test_metric.py
src/: database.py  db_manager.py  engine.py  inventory.py  log_parser.py  main.py  models.py  viz_adapter.py  viz_adapter_old.py
src/analysis/: analysis config yaml  config_schema.py  data_handler.py  data_loader.py  db.py  db_utils.py  drift_detector.py  mlflow_client.py  model.py  model_loader.py  orchestrator.py  poller.py
src/db/: __init__.py  base.py  db_config.json  models.py
tools/: analyse_logs.py  analyse_logs_v2.py  debug_trace.py  generate_dummy_logs.py
(+11 files in other folders)
