[project]
name = "glue-dispenser-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "alembic>=1.14.1",
  "mlflow>=2.17.2",
  "pandas>=2.0.3",
  "psycopg2-binary>=2.9.10",
  "pyyaml>=6.0.3",
  "rerun-sdk>=0.22.1",
  "scikit-learn>=1.3.2",
  "sqlalchemy>=2.0.46",
  "torch>=2.5.1",
]
